# lightspeedpy

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
data/: qe.csv
docs/: conf.py  contribute.rst  index.rst  lightspeedpy.cube.rst  lightspeedpy.rst
docs/_build/: html
docs/_build/doctrees/: contribute.doctree  environment.pickle  index.doctree  installation.doctree  lightspeedpy.cube.doctree  lightspeedpy.doctree  lightspeedpy.image.doctree  lightspeedpy.lc.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  lightspeedpy.html  lightspeedpy.image.html  lightspeedpy.lc.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  lightspeedpy.image.rst.txt  lightspeedpy.lc.rst.txt  lightspeedpy.rst.txt
python/lightspeedpy/: __init__.py  __main__.py  cli.py  constants.py  dataset.py  ephemeris-mine.py  ephemeris.py  example.py  frame.py  image.py  lc.py  pixel_properties.py  pulse_search.py  qe.py  regions.py  util.py  utils.py
python/lightspeedpy/cube/: __init__.py  __main__.py  cube.py  split.py  stack.py
python/lightspeedpy/image/: __init__.py  __main__.py  cli.py  image.py
python/lightspeedpy/lc/: __init__.py  __main__.py  cli.py  lc.py
python/lightspeedpy/onoff/: __init__.py  __main__.py  onoff.py
python/lightspeedpy/psf/: __init__.py  __main__.py  psf.py
python/lightspeedpy/template/: __init__.py  __main__.py
src/: lib.rs
